--- a/Feature Engineering Core.ipynb
+++ b/Feature Engineering Core.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "399fa019-a8cb-4d6e-8705-b04c07d62c31",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "4        75        0.0       0           1      1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a43558cf-0057-4d12-bba6-8f6959951be5",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "4        75        0.0      1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "81c1f9c3-74fc-4ed7-b417-289abd09726a",
    "metadata": {},
    "outputs": [
@@ -393,149 +393,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6ffc9a20-82b3-4c2c-bdff-5198d4bab859",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>season</th>\n",
-       "      <th>holiday</th>\n",
-       "      <th>workingday</th>\n",
-       "      <th>weather</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>atemp</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>count</th>\n",
-       "      <th>month (name)</th>\n",
-       "      <th>day of week (name)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2011-01-01 00:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.84</td>\n",
-       "      <td>14.395</td>\n",
-       "      <td>81</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011-01-01 01:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.02</td>\n",
-       "      <td>13.635</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011-01-01 02:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.02</td>\n",
-       "      <td>13.635</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011-01-01 03:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.84</td>\n",
-       "      <td>14.395</td>\n",
-       "      <td>75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2011-01-01 04:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.84</td>\n",
-       "      <td>14.395</td>\n",
-       "      <td>75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             datetime  season  holiday  workingday  weather  temp   atemp  \\\n",
-       "0 2011-01-01 00:00:00       1        0           0        1  9.84  14.395   \n",
-       "1 2011-01-01 01:00:00       1        0           0        1  9.02  13.635   \n",
-       "2 2011-01-01 02:00:00       1        0           0        1  9.02  13.635   \n",
-       "3 2011-01-01 03:00:00       1        0           0        1  9.84  14.395   \n",
-       "4 2011-01-01 04:00:00       1        0           0        1  9.84  14.395   \n",
-       "\n",
-       "   humidity  windspeed  count month (name) day of week (name)  \n",
-       "0        81        0.0     16      January           Saturday  \n",
-       "1        80        0.0     40      January           Saturday  \n",
-       "2        80        0.0     32      January           Saturday  \n",
-       "3        75        0.0     13      January           Saturday  \n",
-       "4        75        0.0      1      January           Saturday  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'Series' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth (name)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mmonth_name()\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mday of week (name)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mday_name()\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhour of day\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdatetime\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhour\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m df\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'Series' object is not callable"
+     ]
     }
    ],
    "source": [
-    "df['month (name)'] = df['datetime'].dt.month_name()\n",
-    "df['day of week (name)'] = df['datetime'].dt.day_name()\n",
+    "df['month (name)'] = df['datetime'].dt.month_name().astype('object')\n",
+    "df['day of week (name)'] = df['datetime'].dt.day_name().astype('object')\n",
+    "df['hour of day'] = df['datetime'].dt.hour().astype('object')\n",
     "df.head()"
    ]
   },
