--- a/Feature Engineering Core.ipynb
+++ b/Feature Engineering Core.ipynb
@@ -393,33 +393,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6ffc9a20-82b3-4c2c-bdff-5198d4bab859",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Series' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth (name)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mmonth_name()\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mday of week (name)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mday_name()\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhour of day\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdatetime\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhour\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m df\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Series' object is not callable"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>season</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weather</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>count</th>\n",
+       "      <th>month (name)</th>\n",
+       "      <th>day of week (name)</th>\n",
+       "      <th>hour of day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-01-01 00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-01-01 01:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-01-01 02:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-01 03:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011-01-01 04:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             datetime  season  holiday  workingday  weather  temp   atemp  \\\n",
+       "0 2011-01-01 00:00:00       1        0           0        1  9.84  14.395   \n",
+       "1 2011-01-01 01:00:00       1        0           0        1  9.02  13.635   \n",
+       "2 2011-01-01 02:00:00       1        0           0        1  9.02  13.635   \n",
+       "3 2011-01-01 03:00:00       1        0           0        1  9.84  14.395   \n",
+       "4 2011-01-01 04:00:00       1        0           0        1  9.84  14.395   \n",
+       "\n",
+       "   humidity  windspeed  count month (name) day of week (name) hour of day  \n",
+       "0        81        0.0     16      January           Saturday           0  \n",
+       "1        80        0.0     40      January           Saturday           1  \n",
+       "2        80        0.0     32      January           Saturday           2  \n",
+       "3        75        0.0     13      January           Saturday           3  \n",
+       "4        75        0.0      1      January           Saturday           4  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df['month (name)'] = df['datetime'].dt.month_name().astype('object')\n",
     "df['day of week (name)'] = df['datetime'].dt.day_name().astype('object')\n",
-    "df['hour of day'] = df['datetime'].dt.hour().astype('object')\n",
+    "df['hour of day'] = df['datetime'].dt.hour.astype('object')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a596b6d4-e2c5-4f47-a145-851e075dff12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10886 entries, 0 to 10885\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   holiday             10886 non-null  int64  \n",
+      " 1   workingday          10886 non-null  int64  \n",
+      " 2   weather             10886 non-null  int64  \n",
+      " 3   temp                10886 non-null  float64\n",
+      " 4   atemp               10886 non-null  float64\n",
+      " 5   humidity            10886 non-null  int64  \n",
+      " 6   windspeed           10886 non-null  float64\n",
+      " 7   count               10886 non-null  int64  \n",
+      " 8   month (name)        10886 non-null  object \n",
+      " 9   day of week (name)  10886 non-null  object \n",
+      " 10  hour of day         10886 non-null  object \n",
+      "dtypes: float64(3), int64(5), object(3)\n",
+      "memory usage: 935.6+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weather</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>count</th>\n",
+       "      <th>month (name)</th>\n",
+       "      <th>day of week (name)</th>\n",
+       "      <th>hour of day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   holiday  workingday  weather  temp   atemp  humidity  windspeed  count  \\\n",
+       "0        0           0        1  9.84  14.395        81        0.0     16   \n",
+       "1        0           0        1  9.02  13.635        80        0.0     40   \n",
+       "2        0           0        1  9.02  13.635        80        0.0     32   \n",
+       "3        0           0        1  9.84  14.395        75        0.0     13   \n",
+       "4        0           0        1  9.84  14.395        75        0.0      1   \n",
+       "\n",
+       "  month (name) day of week (name) hour of day  \n",
+       "0      January           Saturday           0  \n",
+       "1      January           Saturday           1  \n",
+       "2      January           Saturday           2  \n",
+       "3      January           Saturday           3  \n",
+       "4      January           Saturday           4  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop datetime and season columns\n",
+    "df = df.drop(columns=['datetime','season'])\n",
+    "df.info()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "518f6e26-66e2-4ff3-9d4d-c906a5fa27a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '×' (U+00D7) (2418774280.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[19], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    df[['temp', 'atemp']] = df[['temp','atemp']].apply(lambda c: F = C × 9 5 + 32)\u001b[0m\n\u001b[1;37m                                                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character '×' (U+00D7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use .apply() and lambda functions to convert atemp and temp columns to Farenheit Temps\n",
+    "df[['temp', 'atemp']] = df[['temp','atemp']].apply(lambda c: F = C × 9 5 + 32)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a596b6d4-e2c5-4f47-a145-851e075dff12",
+   "id": "c896e3c6-6ce2-4a09-8d22-529a6745d99a",
    "metadata": {},
    "outputs": [],
    "source": []
